--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^2.28.0",
     "express": "^4.18.1"
   },
   "devDependencies": {
